
PROJECT(ZXHNIFTILIB)
INCLUDE_DIRECTORIES(${ZXHNIFTILIB_SOURCE_DIR}/)


SET(ZXHNIFTILIB_SRC nifti1_io.h nifti1.h nifti1_io.c)

#SET(NIFTI_NIFTILIB_NAME ${PACKAGE_PREFIX}niftiio)
ADD_LIBRARY(niftiio ${ZXHNIFTILIB_SRC} )
TARGET_LINK_LIBRARIES( niftiio znz)


INSTALL_TARGETS(/lib/zxh niftiio)
INSTALL_FILES(/include/zxh .h ${ZXHNIFTILIB_SRC})
